--- a/src/app/admin/states/teaching-periods/teaching-period-edit/directives/teaching-period-details-editor/teaching-period-details-editor.component.scss
+++ b/src/app/admin/states/teaching-periods/teaching-period-edit/directives/teaching-period-details-editor/teaching-period-details-editor.component.scss
@@ -3,7 +3,20 @@
 }
 
 .mat-card{
-    border-radius: 0px;
+    border-radius: 0;
+    padding-bottom: 0;
+}
+
+.main {
+    width: 100%;
+}
+
+.mat-toolbar {
+    background-color: white;
 }
   
+.mat-toolbar-row {
+    padding: 0;
+    justify-content: flex-end;
+}
     
