feat: update button style

--- a/src/app/admin/states/teaching-periods/teaching-period-edit/directives/teaching-period-units/teaching-period-units.component.html
+++ b/src/app/admin/states/teaching-periods/teaching-period-edit/directives/teaching-period-units/teaching-period-units.component.html
@@ -51,7 +51,7 @@
       <td mat-footer-cell *matFooterCellDef [colSpan]="columns.length">
         <mat-toolbar>
           <mat-toolbar-row>
-            <button mat-stroked-button target="_blank" (click)="rolloverTeachingPeriod()">
+            <button mat-flat-button color="primary" target="_blank" (click)="rolloverTeachingPeriod()">
               <i class="fa fa-plus"></i> Rollover Teaching Period
             </button>
           </mat-toolbar-row>
